test/badCoerce.slq
def wat(x:B)mfree:ğŸ™{
	y := x coerce !ğ”¹; /// error
	if y {
		print("hi");
	}
}

def main(){
	wat(x):=();
	return x;
}
